src/bin/pgaftest/test_spec_parse.output
Terminals which are not used

   T_CITUS_COORDINATOR
   T_CITUS_WORKER


State 77 conflicts: 3 shift/reduce


Grammar

    0 $accept: spec $end

    1 spec: spec_item
    2     | spec spec_item

    3 spec_item: cluster_block
    4          | setup_block
    5          | teardown_block
    6          | named_step
    7          | sequence_block

    8 @1: /* empty */

    9 cluster_block: T_CLUSTER T_LBRACE @1 cluster_item_list T_RBRACE

   10 cluster_item_list: /* empty */
   11                  | cluster_item_list cluster_item

   12 cluster_item: monitor_line
   13             | image_line
   14             | ssl_line
   15             | auth_line
   16             | formation_block

   17 monitor_line: T_MONITOR monitor_opt_list

   18 monitor_opt_list: /* empty */
   19                 | monitor_opt_list monitor_opt

   20 monitor_opt: T_SSL T_IDENT
   21            | T_AUTH T_IDENT
   22            | T_AUTH_METHOD T_IDENT
   23            | T_PORT T_INTEGER

   24 image_line: T_IMAGE T_STRING
   25           | T_IMAGE T_IDENT

   26 ssl_line: T_SSL T_IDENT

   27 auth_line: T_AUTH T_IDENT
   28          | T_AUTH_METHOD T_IDENT

   29 @2: /* empty */

   30 formation_block: T_FORMATION @2 formation_opt_list T_LBRACE node_list T_RBRACE

   31 formation_opt_list: /* empty */
   32                   | formation_opt_list formation_opt

   33 formation_opt: T_IDENT
   34              | T_NUM_SYNC T_INTEGER

   35 node_list: /* empty */
   36          | node_list node_line

   37 node_name: T_IDENT
   38          | T_MONITOR
   39          | T_NODE

   40 @3: /* empty */

   41 node_line: node_name @3 node_opt_list

   42 node_opt_list: /* empty */
   43              | node_opt_list node_opt

   44 node_opt: T_COORDINATOR
   45         | T_WORKER
   46         | T_ASYNC
   47         | T_NO_MONITOR
   48         | T_NO_AUTOSTART
   49         | T_LISTEN
   50         | T_CITUS_SECONDARY
   51         | T_CANDIDATE_PRIORITY T_INTEGER
   52         | T_GROUP T_INTEGER
   53         | T_PORT T_INTEGER
   54         | T_CITUS_CLUSTER_NAME T_IDENT
   55         | T_DEBIAN_CLUSTER T_IDENT
   56         | T_SSL T_IDENT
   57         | T_AUTH T_IDENT
   58         | T_AUTH_METHOD T_IDENT
   59         | T_REPLICATION_QUORUM T_IDENT

   60 setup_block: T_SETUP cmd_block

   61 teardown_block: T_TEARDOWN cmd_block

   62 named_step: T_STEP ident_or_string cmd_block

   63 cmd_block: T_LBRACE cmd_list T_RBRACE

   64 cmd_list: /* empty */
   65         | cmd_list step_cmd

   66 step_cmd: exec_cmd
   67         | wait_cmd
   68         | assert_cmd
   69         | sql_cmd
   70         | expect_cmd
   71         | promote_cmd
   72         | network_cmd
   73         | sleep_cmd
   74         | compose_cmd

   75 exec_cmd: T_EXEC T_IDENT T_SHELL_ARGS
   76         | T_EXEC T_IDENT
   77         | T_EXEC_FAILS T_IDENT T_SHELL_ARGS
   78         | T_EXEC_FAILS T_IDENT

   79 wait_cmd: T_WAIT T_UNTIL T_IDENT T_STATE T_EQUALS fsm_state opt_timeout
   80         | T_WAIT T_UNTIL T_IDENT T_STATE T_EQUALS T_IDENT opt_timeout
   81         | T_WAIT T_UNTIL T_IDENT T_ASSIGNED_STATE T_EQUALS fsm_state opt_timeout
   82         | T_WAIT T_UNTIL T_IDENT T_ASSIGNED_STATE T_EQUALS T_IDENT opt_timeout
   83         | T_WAIT T_UNTIL T_IDENT T_STOPPED opt_timeout
   84         | T_WAIT T_UNTIL state_name_list opt_in_group opt_timeout

   85 state_name_list: fsm_state
   86                | T_IDENT
   87                | state_name_list T_COMMA fsm_state
   88                | state_name_list T_COMMA T_IDENT

   89 opt_in_group: /* empty */
   90             | T_IN group_items

   91 group_items: T_GROUP T_INTEGER
   92            | group_items T_COMMA T_GROUP T_INTEGER

   93 opt_timeout: /* empty */
   94            | T_TIMEOUT T_INTEGER

   95 assert_cmd: T_ASSERT T_IDENT T_STATE T_EQUALS fsm_state
   96           | T_ASSERT T_IDENT T_STATE T_EQUALS T_IDENT
   97           | T_ASSERT T_IDENT T_ASSIGNED_STATE T_EQUALS fsm_state
   98           | T_ASSERT T_IDENT T_ASSIGNED_STATE T_EQUALS T_IDENT

   99 sql_cmd: T_SQL T_IDENT T_BLOCK

  100 expect_cmd: T_EXPECT T_BLOCK
  101           | T_EXPECT T_ERROR
  102           | T_EXPECT T_ERROR T_IDENT
  103           | T_EXPECT T_ERROR T_INTEGER

  104 promote_cmd: T_PROMOTE promote_list

  105 promote_list: T_IDENT
  106             | promote_list T_COMMA T_IDENT

  107 network_cmd: T_NETWORK T_DISCONNECT T_IDENT
  108            | T_NETWORK T_CONNECT T_IDENT

  109 sleep_cmd: T_SLEEP T_INTEGER

  110 compose_cmd: T_COMPOSE T_DOWN
  111            | T_COMPOSE T_START T_IDENT
  112            | T_COMPOSE T_STOP T_IDENT

  113 sequence_block: T_SEQUENCE sequence_names

  114 sequence_names: /* empty */
  115               | sequence_names ident_or_string

  116 fsm_state: T_FS_INIT
  117          | T_FS_SINGLE
  118          | T_FS_PRIMARY
  119          | T_FS_WAIT_PRIMARY
  120          | T_FS_WAIT_STANDBY
  121          | T_FS_DEMOTED
  122          | T_FS_DEMOTE_TIMEOUT
  123          | T_FS_DRAINING
  124          | T_FS_SECONDARY
  125          | T_FS_CATCHINGUP
  126          | T_FS_PREP_PROMOTION
  127          | T_FS_STOP_REPLICATION
  128          | T_FS_MAINTENANCE
  129          | T_FS_JOIN_PRIMARY
  130          | T_FS_APPLY_SETTINGS
  131          | T_FS_PREPARE_MAINTENANCE
  132          | T_FS_WAIT_MAINTENANCE
  133          | T_FS_REPORT_LSN
  134          | T_FS_FAST_FORWARD
  135          | T_FS_JOIN_SECONDARY
  136          | T_FS_DROPPED

  137 ident_or_string: T_IDENT
  138                | T_STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
T_CLUSTER (258) 9
T_MONITOR (259) 17 38
T_NODE (260) 39
T_CITUS_COORDINATOR (261)
T_CITUS_WORKER (262)
T_SETUP (263) 60
T_TEARDOWN (264) 61
T_STEP (265) 62
T_SEQUENCE (266) 113
T_EQUALS (267) 79 80 81 82 95 96 97 98
T_IMAGE (268) 24 25
T_SSL (269) 20 26 56
T_AUTH (270) 21 27 57
T_AUTH_METHOD (271) 22 28 58
T_FORMATION (272) 30
T_NUM_SYNC (273) 34
T_COORDINATOR (274) 44
T_WORKER (275) 45
T_ASYNC (276) 46
T_NO_MONITOR (277) 47
T_NO_AUTOSTART (278) 48
T_LISTEN (279) 49
T_CITUS_SECONDARY (280) 50
T_CANDIDATE_PRIORITY (281) 51
T_PORT (282) 23 53
T_CITUS_CLUSTER_NAME (283) 54
T_DEBIAN_CLUSTER (284) 55
T_REPLICATION_QUORUM (285) 59
T_FS_INIT (286) 116
T_FS_SINGLE (287) 117
T_FS_PRIMARY (288) 118
T_FS_WAIT_PRIMARY (289) 119
T_FS_WAIT_STANDBY (290) 120
T_FS_DEMOTED (291) 121
T_FS_DEMOTE_TIMEOUT (292) 122
T_FS_DRAINING (293) 123
T_FS_SECONDARY (294) 124
T_FS_CATCHINGUP (295) 125
T_FS_PREP_PROMOTION (296) 126
T_FS_STOP_REPLICATION (297) 127
T_FS_MAINTENANCE (298) 128
T_FS_JOIN_PRIMARY (299) 129
T_FS_APPLY_SETTINGS (300) 130
T_FS_PREPARE_MAINTENANCE (301) 131
T_FS_WAIT_MAINTENANCE (302) 132
T_FS_REPORT_LSN (303) 133
T_FS_FAST_FORWARD (304) 134
T_FS_JOIN_SECONDARY (305) 135
T_FS_DROPPED (306) 136
T_EXEC (307) 75 76
T_EXEC_FAILS (308) 77 78
T_WAIT (309) 79 80 81 82 83 84
T_UNTIL (310) 79 80 81 82 83 84
T_TIMEOUT (311) 94
T_ASSERT (312) 95 96 97 98
T_SQL (313) 99
T_EXPECT (314) 100 101 102 103
T_ERROR (315) 101 102 103
T_PROMOTE (316) 104
T_NETWORK (317) 107 108
T_DISCONNECT (318) 107
T_CONNECT (319) 108
T_SLEEP (320) 109
T_COMPOSE (321) 110 111 112
T_DOWN (322) 110
T_START (323) 111
T_STOP (324) 112
T_STOPPED (325) 83
T_STATE (326) 79 80 95 96
T_ASSIGNED_STATE (327) 81 82 97 98
T_IN (328) 90
T_GROUP (329) 52 91 92
T_LBRACE (330) 9 30 63
T_RBRACE (331) 9 30 63
T_COMMA (332) 87 88 92 106
T_INTEGER (333) 23 34 51 52 53 91 92 94 103 109
T_IDENT (334) 20 21 22 25 26 27 28 33 37 54 55 56 57 58 59 75 76 77
    78 79 80 81 82 83 86 88 95 96 97 98 99 102 105 106 107 108 111
    112 137
T_STRING (335) 24 138
T_BLOCK (336) 99 100
T_SHELL_ARGS (337) 75 77


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
spec (84)
    on left: 1 2, on right: 0 2
spec_item (85)
    on left: 3 4 5 6 7, on right: 1 2
cluster_block (86)
    on left: 9, on right: 3
@1 (87)
    on left: 8, on right: 9
cluster_item_list (88)
    on left: 10 11, on right: 9 11
cluster_item (89)
    on left: 12 13 14 15 16, on right: 11
monitor_line (90)
    on left: 17, on right: 12
monitor_opt_list (91)
    on left: 18 19, on right: 17 19
monitor_opt (92)
    on left: 20 21 22 23, on right: 19
image_line (93)
    on left: 24 25, on right: 13
ssl_line (94)
    on left: 26, on right: 14
auth_line (95)
    on left: 27 28, on right: 15
formation_block (96)
    on left: 30, on right: 16
@2 (97)
    on left: 29, on right: 30
formation_opt_list (98)
    on left: 31 32, on right: 30 32
formation_opt (99)
    on left: 33 34, on right: 32
node_list (100)
    on left: 35 36, on right: 30 36
node_name (101)
    on left: 37 38 39, on right: 41
node_line (102)
    on left: 41, on right: 36
@3 (103)
    on left: 40, on right: 41
node_opt_list (104)
    on left: 42 43, on right: 41 43
node_opt (105)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59,
    on right: 43
setup_block (106)
    on left: 60, on right: 4
teardown_block (107)
    on left: 61, on right: 5
named_step (108)
    on left: 62, on right: 6
cmd_block (109)
    on left: 63, on right: 60 61 62
cmd_list (110)
    on left: 64 65, on right: 63 65
step_cmd (111)
    on left: 66 67 68 69 70 71 72 73 74, on right: 65
exec_cmd (112)
    on left: 75 76 77 78, on right: 66
wait_cmd (113)
    on left: 79 80 81 82 83 84, on right: 67
state_name_list (114)
    on left: 85 86 87 88, on right: 84 87 88
opt_in_group (115)
    on left: 89 90, on right: 84
group_items (116)
    on left: 91 92, on right: 90 92
opt_timeout (117)
    on left: 93 94, on right: 79 80 81 82 83 84
assert_cmd (118)
    on left: 95 96 97 98, on right: 68
sql_cmd (119)
    on left: 99, on right: 69
expect_cmd (120)
    on left: 100 101 102 103, on right: 70
promote_cmd (121)
    on left: 104, on right: 71
promote_list (122)
    on left: 105 106, on right: 104 106
network_cmd (123)
    on left: 107 108, on right: 72
sleep_cmd (124)
    on left: 109, on right: 73
compose_cmd (125)
    on left: 110 111 112, on right: 74
sequence_block (126)
    on left: 113, on right: 7
sequence_names (127)
    on left: 114 115, on right: 113 115
fsm_state (128)
    on left: 116 117 118 119 120 121 122 123 124 125 126 127 128 129
    130 131 132 133 134 135 136, on right: 79 81 85 87 95 97
ident_or_string (129)
    on left: 137 138, on right: 62 115


state 0

    0 $accept: . spec $end

    T_CLUSTER   shift, and go to state 1
    T_SETUP     shift, and go to state 2
    T_TEARDOWN  shift, and go to state 3
    T_STEP      shift, and go to state 4
    T_SEQUENCE  shift, and go to state 5

    spec            go to state 6
    spec_item       go to state 7
    cluster_block   go to state 8
    setup_block     go to state 9
    teardown_block  go to state 10
    named_step      go to state 11
    sequence_block  go to state 12


state 1

    9 cluster_block: T_CLUSTER . T_LBRACE @1 cluster_item_list T_RBRACE

    T_LBRACE  shift, and go to state 13


state 2

   60 setup_block: T_SETUP . cmd_block

    T_LBRACE  shift, and go to state 14

    cmd_block  go to state 15


state 3

   61 teardown_block: T_TEARDOWN . cmd_block

    T_LBRACE  shift, and go to state 14

    cmd_block  go to state 16


state 4

   62 named_step: T_STEP . ident_or_string cmd_block

    T_IDENT   shift, and go to state 17
    T_STRING  shift, and go to state 18

    ident_or_string  go to state 19


state 5

  113 sequence_block: T_SEQUENCE . sequence_names

    $default  reduce using rule 114 (sequence_names)

    sequence_names  go to state 20


state 6

    0 $accept: spec . $end
    2 spec: spec . spec_item

    $end        shift, and go to state 21
    T_CLUSTER   shift, and go to state 1
    T_SETUP     shift, and go to state 2
    T_TEARDOWN  shift, and go to state 3
    T_STEP      shift, and go to state 4
    T_SEQUENCE  shift, and go to state 5

    spec_item       go to state 22
    cluster_block   go to state 8
    setup_block     go to state 9
    teardown_block  go to state 10
    named_step      go to state 11
    sequence_block  go to state 12


state 7

    1 spec: spec_item .

    $default  reduce using rule 1 (spec)


state 8

    3 spec_item: cluster_block .

    $default  reduce using rule 3 (spec_item)


state 9

    4 spec_item: setup_block .

    $default  reduce using rule 4 (spec_item)


state 10

    5 spec_item: teardown_block .

    $default  reduce using rule 5 (spec_item)


state 11

    6 spec_item: named_step .

    $default  reduce using rule 6 (spec_item)


state 12

    7 spec_item: sequence_block .

    $default  reduce using rule 7 (spec_item)


state 13

    9 cluster_block: T_CLUSTER T_LBRACE . @1 cluster_item_list T_RBRACE

    $default  reduce using rule 8 (@1)

    @1  go to state 23


state 14

   63 cmd_block: T_LBRACE . cmd_list T_RBRACE

    $default  reduce using rule 64 (cmd_list)

    cmd_list  go to state 24


state 15

   60 setup_block: T_SETUP cmd_block .

    $default  reduce using rule 60 (setup_block)


state 16

   61 teardown_block: T_TEARDOWN cmd_block .

    $default  reduce using rule 61 (teardown_block)


state 17

  137 ident_or_string: T_IDENT .

    $default  reduce using rule 137 (ident_or_string)


state 18

  138 ident_or_string: T_STRING .

    $default  reduce using rule 138 (ident_or_string)


state 19

   62 named_step: T_STEP ident_or_string . cmd_block

    T_LBRACE  shift, and go to state 14

    cmd_block  go to state 25


state 20

  113 sequence_block: T_SEQUENCE sequence_names .
  115 sequence_names: sequence_names . ident_or_string

    T_IDENT   shift, and go to state 17
    T_STRING  shift, and go to state 18

    $default  reduce using rule 113 (sequence_block)

    ident_or_string  go to state 26


state 21

    0 $accept: spec $end .

    $default  accept


state 22

    2 spec: spec spec_item .

    $default  reduce using rule 2 (spec)


state 23

    9 cluster_block: T_CLUSTER T_LBRACE @1 . cluster_item_list T_RBRACE

    $default  reduce using rule 10 (cluster_item_list)

    cluster_item_list  go to state 27


state 24

   63 cmd_block: T_LBRACE cmd_list . T_RBRACE
   65 cmd_list: cmd_list . step_cmd

    T_EXEC        shift, and go to state 28
    T_EXEC_FAILS  shift, and go to state 29
    T_WAIT        shift, and go to state 30
    T_ASSERT      shift, and go to state 31
    T_SQL         shift, and go to state 32
    T_EXPECT      shift, and go to state 33
    T_PROMOTE     shift, and go to state 34
    T_NETWORK     shift, and go to state 35
    T_SLEEP       shift, and go to state 36
    T_COMPOSE     shift, and go to state 37
    T_RBRACE      shift, and go to state 38

    step_cmd     go to state 39
    exec_cmd     go to state 40
    wait_cmd     go to state 41
    assert_cmd   go to state 42
    sql_cmd      go to state 43
    expect_cmd   go to state 44
    promote_cmd  go to state 45
    network_cmd  go to state 46
    sleep_cmd    go to state 47
    compose_cmd  go to state 48


state 25

   62 named_step: T_STEP ident_or_string cmd_block .

    $default  reduce using rule 62 (named_step)


state 26

  115 sequence_names: sequence_names ident_or_string .

    $default  reduce using rule 115 (sequence_names)


state 27

    9 cluster_block: T_CLUSTER T_LBRACE @1 cluster_item_list . T_RBRACE
   11 cluster_item_list: cluster_item_list . cluster_item

    T_MONITOR      shift, and go to state 49
    T_IMAGE        shift, and go to state 50
    T_SSL          shift, and go to state 51
    T_AUTH         shift, and go to state 52
    T_AUTH_METHOD  shift, and go to state 53
    T_FORMATION    shift, and go to state 54
    T_RBRACE       shift, and go to state 55

    cluster_item     go to state 56
    monitor_line     go to state 57
    image_line       go to state 58
    ssl_line         go to state 59
    auth_line        go to state 60
    formation_block  go to state 61


state 28

   75 exec_cmd: T_EXEC . T_IDENT T_SHELL_ARGS
   76         | T_EXEC . T_IDENT

    T_IDENT  shift, and go to state 62


state 29

   77 exec_cmd: T_EXEC_FAILS . T_IDENT T_SHELL_ARGS
   78         | T_EXEC_FAILS . T_IDENT

    T_IDENT  shift, and go to state 63


state 30

   79 wait_cmd: T_WAIT . T_UNTIL T_IDENT T_STATE T_EQUALS fsm_state opt_timeout
   80         | T_WAIT . T_UNTIL T_IDENT T_STATE T_EQUALS T_IDENT opt_timeout
   81         | T_WAIT . T_UNTIL T_IDENT T_ASSIGNED_STATE T_EQUALS fsm_state opt_timeout
   82         | T_WAIT . T_UNTIL T_IDENT T_ASSIGNED_STATE T_EQUALS T_IDENT opt_timeout
   83         | T_WAIT . T_UNTIL T_IDENT T_STOPPED opt_timeout
   84         | T_WAIT . T_UNTIL state_name_list opt_in_group opt_timeout

    T_UNTIL  shift, and go to state 64


state 31

   95 assert_cmd: T_ASSERT . T_IDENT T_STATE T_EQUALS fsm_state
   96           | T_ASSERT . T_IDENT T_STATE T_EQUALS T_IDENT
   97           | T_ASSERT . T_IDENT T_ASSIGNED_STATE T_EQUALS fsm_state
   98           | T_ASSERT . T_IDENT T_ASSIGNED_STATE T_EQUALS T_IDENT

    T_IDENT  shift, and go to state 65


state 32

   99 sql_cmd: T_SQL . T_IDENT T_BLOCK

    T_IDENT  shift, and go to state 66


state 33

  100 expect_cmd: T_EXPECT . T_BLOCK
  101           | T_EXPECT . T_ERROR
  102           | T_EXPECT . T_ERROR T_IDENT
  103           | T_EXPECT . T_ERROR T_INTEGER

    T_ERROR  shift, and go to state 67
    T_BLOCK  shift, and go to state 68


state 34

  104 promote_cmd: T_PROMOTE . promote_list

    T_IDENT  shift, and go to state 69

    promote_list  go to state 70


state 35

  107 network_cmd: T_NETWORK . T_DISCONNECT T_IDENT
  108            | T_NETWORK . T_CONNECT T_IDENT

    T_DISCONNECT  shift, and go to state 71
    T_CONNECT     shift, and go to state 72


state 36

  109 sleep_cmd: T_SLEEP . T_INTEGER

    T_INTEGER  shift, and go to state 73


state 37

  110 compose_cmd: T_COMPOSE . T_DOWN
  111            | T_COMPOSE . T_START T_IDENT
  112            | T_COMPOSE . T_STOP T_IDENT

    T_DOWN   shift, and go to state 74
    T_START  shift, and go to state 75
    T_STOP   shift, and go to state 76


state 38

   63 cmd_block: T_LBRACE cmd_list T_RBRACE .

    $default  reduce using rule 63 (cmd_block)


state 39

   65 cmd_list: cmd_list step_cmd .

    $default  reduce using rule 65 (cmd_list)


state 40

   66 step_cmd: exec_cmd .

    $default  reduce using rule 66 (step_cmd)


state 41

   67 step_cmd: wait_cmd .

    $default  reduce using rule 67 (step_cmd)


state 42

   68 step_cmd: assert_cmd .

    $default  reduce using rule 68 (step_cmd)


state 43

   69 step_cmd: sql_cmd .

    $default  reduce using rule 69 (step_cmd)


state 44

   70 step_cmd: expect_cmd .

    $default  reduce using rule 70 (step_cmd)


state 45

   71 step_cmd: promote_cmd .

    $default  reduce using rule 71 (step_cmd)


state 46

   72 step_cmd: network_cmd .

    $default  reduce using rule 72 (step_cmd)


state 47

   73 step_cmd: sleep_cmd .

    $default  reduce using rule 73 (step_cmd)


state 48

   74 step_cmd: compose_cmd .

    $default  reduce using rule 74 (step_cmd)


state 49

   17 monitor_line: T_MONITOR . monitor_opt_list

    $default  reduce using rule 18 (monitor_opt_list)

    monitor_opt_list  go to state 77


state 50

   24 image_line: T_IMAGE . T_STRING
   25           | T_IMAGE . T_IDENT

    T_IDENT   shift, and go to state 78
    T_STRING  shift, and go to state 79


state 51

   26 ssl_line: T_SSL . T_IDENT

    T_IDENT  shift, and go to state 80


state 52

   27 auth_line: T_AUTH . T_IDENT

    T_IDENT  shift, and go to state 81


state 53

   28 auth_line: T_AUTH_METHOD . T_IDENT

    T_IDENT  shift, and go to state 82


state 54

   30 formation_block: T_FORMATION . @2 formation_opt_list T_LBRACE node_list T_RBRACE

    $default  reduce using rule 29 (@2)

    @2  go to state 83


state 55

    9 cluster_block: T_CLUSTER T_LBRACE @1 cluster_item_list T_RBRACE .

    $default  reduce using rule 9 (cluster_block)


state 56

   11 cluster_item_list: cluster_item_list cluster_item .

    $default  reduce using rule 11 (cluster_item_list)


state 57

   12 cluster_item: monitor_line .

    $default  reduce using rule 12 (cluster_item)


state 58

   13 cluster_item: image_line .

    $default  reduce using rule 13 (cluster_item)


state 59

   14 cluster_item: ssl_line .

    $default  reduce using rule 14 (cluster_item)


state 60

   15 cluster_item: auth_line .

    $default  reduce using rule 15 (cluster_item)


state 61

   16 cluster_item: formation_block .

    $default  reduce using rule 16 (cluster_item)


state 62

   75 exec_cmd: T_EXEC T_IDENT . T_SHELL_ARGS
   76         | T_EXEC T_IDENT .

    T_SHELL_ARGS  shift, and go to state 84

    $default  reduce using rule 76 (exec_cmd)


state 63

   77 exec_cmd: T_EXEC_FAILS T_IDENT . T_SHELL_ARGS
   78         | T_EXEC_FAILS T_IDENT .

    T_SHELL_ARGS  shift, and go to state 85

    $default  reduce using rule 78 (exec_cmd)


state 64

   79 wait_cmd: T_WAIT T_UNTIL . T_IDENT T_STATE T_EQUALS fsm_state opt_timeout
   80         | T_WAIT T_UNTIL . T_IDENT T_STATE T_EQUALS T_IDENT opt_timeout
   81         | T_WAIT T_UNTIL . T_IDENT T_ASSIGNED_STATE T_EQUALS fsm_state opt_timeout
   82         | T_WAIT T_UNTIL . T_IDENT T_ASSIGNED_STATE T_EQUALS T_IDENT opt_timeout
   83         | T_WAIT T_UNTIL . T_IDENT T_STOPPED opt_timeout
   84         | T_WAIT T_UNTIL . state_name_list opt_in_group opt_timeout

    T_FS_INIT                 shift, and go to state 86
    T_FS_SINGLE               shift, and go to state 87
    T_FS_PRIMARY              shift, and go to state 88
    T_FS_WAIT_PRIMARY         shift, and go to state 89
    T_FS_WAIT_STANDBY         shift, and go to state 90
    T_FS_DEMOTED              shift, and go to state 91
    T_FS_DEMOTE_TIMEOUT       shift, and go to state 92
    T_FS_DRAINING             shift, and go to state 93
    T_FS_SECONDARY            shift, and go to state 94
    T_FS_CATCHINGUP           shift, and go to state 95
    T_FS_PREP_PROMOTION       shift, and go to state 96
    T_FS_STOP_REPLICATION     shift, and go to state 97
    T_FS_MAINTENANCE          shift, and go to state 98
    T_FS_JOIN_PRIMARY         shift, and go to state 99
    T_FS_APPLY_SETTINGS       shift, and go to state 100
    T_FS_PREPARE_MAINTENANCE  shift, and go to state 101
    T_FS_WAIT_MAINTENANCE     shift, and go to state 102
    T_FS_REPORT_LSN           shift, and go to state 103
    T_FS_FAST_FORWARD         shift, and go to state 104
    T_FS_JOIN_SECONDARY       shift, and go to state 105
    T_FS_DROPPED              shift, and go to state 106
    T_IDENT                   shift, and go to state 107

    state_name_list  go to state 108
    fsm_state        go to state 109


state 65

   95 assert_cmd: T_ASSERT T_IDENT . T_STATE T_EQUALS fsm_state
   96           | T_ASSERT T_IDENT . T_STATE T_EQUALS T_IDENT
   97           | T_ASSERT T_IDENT . T_ASSIGNED_STATE T_EQUALS fsm_state
   98           | T_ASSERT T_IDENT . T_ASSIGNED_STATE T_EQUALS T_IDENT

    T_STATE           shift, and go to state 110
    T_ASSIGNED_STATE  shift, and go to state 111


state 66

   99 sql_cmd: T_SQL T_IDENT . T_BLOCK

    T_BLOCK  shift, and go to state 112


state 67

  101 expect_cmd: T_EXPECT T_ERROR .
  102           | T_EXPECT T_ERROR . T_IDENT
  103           | T_EXPECT T_ERROR . T_INTEGER

    T_INTEGER  shift, and go to state 113
    T_IDENT    shift, and go to state 114

    $default  reduce using rule 101 (expect_cmd)


state 68

  100 expect_cmd: T_EXPECT T_BLOCK .

    $default  reduce using rule 100 (expect_cmd)


state 69

  105 promote_list: T_IDENT .

    $default  reduce using rule 105 (promote_list)


state 70

  104 promote_cmd: T_PROMOTE promote_list .
  106 promote_list: promote_list . T_COMMA T_IDENT

    T_COMMA  shift, and go to state 115

    $default  reduce using rule 104 (promote_cmd)


state 71

  107 network_cmd: T_NETWORK T_DISCONNECT . T_IDENT

    T_IDENT  shift, and go to state 116


state 72

  108 network_cmd: T_NETWORK T_CONNECT . T_IDENT

    T_IDENT  shift, and go to state 117


state 73

  109 sleep_cmd: T_SLEEP T_INTEGER .

    $default  reduce using rule 109 (sleep_cmd)


state 74

  110 compose_cmd: T_COMPOSE T_DOWN .

    $default  reduce using rule 110 (compose_cmd)


state 75

  111 compose_cmd: T_COMPOSE T_START . T_IDENT

    T_IDENT  shift, and go to state 118


state 76

  112 compose_cmd: T_COMPOSE T_STOP . T_IDENT

    T_IDENT  shift, and go to state 119


state 77

   17 monitor_line: T_MONITOR monitor_opt_list .
   19 monitor_opt_list: monitor_opt_list . monitor_opt

    T_SSL          shift, and go to state 120
    T_AUTH         shift, and go to state 121
    T_AUTH_METHOD  shift, and go to state 122
    T_PORT         shift, and go to state 123

    T_SSL          [reduce using rule 17 (monitor_line)]
    T_AUTH         [reduce using rule 17 (monitor_line)]
    T_AUTH_METHOD  [reduce using rule 17 (monitor_line)]
    $default       reduce using rule 17 (monitor_line)

    monitor_opt  go to state 124


state 78

   25 image_line: T_IMAGE T_IDENT .

    $default  reduce using rule 25 (image_line)


state 79

   24 image_line: T_IMAGE T_STRING .

    $default  reduce using rule 24 (image_line)


state 80

   26 ssl_line: T_SSL T_IDENT .

    $default  reduce using rule 26 (ssl_line)


state 81

   27 auth_line: T_AUTH T_IDENT .

    $default  reduce using rule 27 (auth_line)


state 82

   28 auth_line: T_AUTH_METHOD T_IDENT .

    $default  reduce using rule 28 (auth_line)


state 83

   30 formation_block: T_FORMATION @2 . formation_opt_list T_LBRACE node_list T_RBRACE

    $default  reduce using rule 31 (formation_opt_list)

    formation_opt_list  go to state 125


state 84

   75 exec_cmd: T_EXEC T_IDENT T_SHELL_ARGS .

    $default  reduce using rule 75 (exec_cmd)


state 85

   77 exec_cmd: T_EXEC_FAILS T_IDENT T_SHELL_ARGS .

    $default  reduce using rule 77 (exec_cmd)


state 86

  116 fsm_state: T_FS_INIT .

    $default  reduce using rule 116 (fsm_state)


state 87

  117 fsm_state: T_FS_SINGLE .

    $default  reduce using rule 117 (fsm_state)


state 88

  118 fsm_state: T_FS_PRIMARY .

    $default  reduce using rule 118 (fsm_state)


state 89

  119 fsm_state: T_FS_WAIT_PRIMARY .

    $default  reduce using rule 119 (fsm_state)


state 90

  120 fsm_state: T_FS_WAIT_STANDBY .

    $default  reduce using rule 120 (fsm_state)


state 91

  121 fsm_state: T_FS_DEMOTED .

    $default  reduce using rule 121 (fsm_state)


state 92

  122 fsm_state: T_FS_DEMOTE_TIMEOUT .

    $default  reduce using rule 122 (fsm_state)


state 93

  123 fsm_state: T_FS_DRAINING .

    $default  reduce using rule 123 (fsm_state)


state 94

  124 fsm_state: T_FS_SECONDARY .

    $default  reduce using rule 124 (fsm_state)


state 95

  125 fsm_state: T_FS_CATCHINGUP .

    $default  reduce using rule 125 (fsm_state)


state 96

  126 fsm_state: T_FS_PREP_PROMOTION .

    $default  reduce using rule 126 (fsm_state)


state 97

  127 fsm_state: T_FS_STOP_REPLICATION .

    $default  reduce using rule 127 (fsm_state)


state 98

  128 fsm_state: T_FS_MAINTENANCE .

    $default  reduce using rule 128 (fsm_state)


state 99

  129 fsm_state: T_FS_JOIN_PRIMARY .

    $default  reduce using rule 129 (fsm_state)


state 100

  130 fsm_state: T_FS_APPLY_SETTINGS .

    $default  reduce using rule 130 (fsm_state)


state 101

  131 fsm_state: T_FS_PREPARE_MAINTENANCE .

    $default  reduce using rule 131 (fsm_state)


state 102

  132 fsm_state: T_FS_WAIT_MAINTENANCE .

    $default  reduce using rule 132 (fsm_state)


state 103

  133 fsm_state: T_FS_REPORT_LSN .

    $default  reduce using rule 133 (fsm_state)


state 104

  134 fsm_state: T_FS_FAST_FORWARD .

    $default  reduce using rule 134 (fsm_state)


state 105

  135 fsm_state: T_FS_JOIN_SECONDARY .

    $default  reduce using rule 135 (fsm_state)


state 106

  136 fsm_state: T_FS_DROPPED .

    $default  reduce using rule 136 (fsm_state)


state 107

   79 wait_cmd: T_WAIT T_UNTIL T_IDENT . T_STATE T_EQUALS fsm_state opt_timeout
   80         | T_WAIT T_UNTIL T_IDENT . T_STATE T_EQUALS T_IDENT opt_timeout
   81         | T_WAIT T_UNTIL T_IDENT . T_ASSIGNED_STATE T_EQUALS fsm_state opt_timeout
   82         | T_WAIT T_UNTIL T_IDENT . T_ASSIGNED_STATE T_EQUALS T_IDENT opt_timeout
   83         | T_WAIT T_UNTIL T_IDENT . T_STOPPED opt_timeout
   86 state_name_list: T_IDENT .

    T_STOPPED         shift, and go to state 126
    T_STATE           shift, and go to state 127
    T_ASSIGNED_STATE  shift, and go to state 128

    $default  reduce using rule 86 (state_name_list)


state 108

   84 wait_cmd: T_WAIT T_UNTIL state_name_list . opt_in_group opt_timeout
   87 state_name_list: state_name_list . T_COMMA fsm_state
   88                | state_name_list . T_COMMA T_IDENT

    T_IN     shift, and go to state 129
    T_COMMA  shift, and go to state 130

    $default  reduce using rule 89 (opt_in_group)

    opt_in_group  go to state 131


state 109
